--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "angular2": "2.0.0-beta.15",
-    "systemjs": "0.19.26",
+    "bootstrap": "^3.3.6",
     "es6-shim": "^0.35.0",
+    "font-awesome": "^4.6.3",
+    "leaflet": "^0.7.7",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
+    "systemjs": "0.19.26",
     "zone.js": "0.6.10"
   },
   "devDependencies": {
